overflow-x  fix

--- a/css/flower-show.css
+++ b/css/flower-show.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    overflow-x: hidden;
 }
 
 /* CSS for banner section */
